--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -1,9 +1,7 @@
 name: allure
 
-on:
-  push:
-    branches-ignore:
-      - '!master'
+on: [push]
+
 jobs:
   autotests:
     name: Run tests and generate Allure Report
