--- a/.github/workflows/allure.yml
+++ b/.github/workflows/allure.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run Test
         if: always()
-        run: mvn clean test -Dheadless=true
+        run: mvn clean test
         continue-on-error: true
 
       - name: Get Allure history
